# Kobalt_Music_Take_Home

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  sonar-project.properties
.circleci/: config.yml
backend/lambdas/check_service/: handler.py
backend/lambdas/front_service/: handler.py
backend/lambdas/monitor_service/: handler.py
docs/: deployment.md  index.md  need.md  tech_stack.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
infra/: main.tf  variables.tf
infra/ecs/: main.tf  outputs.tf  variables.tf
infra/iam/: main.tf  outputs.tf  variables.tf
infra/lambda/: main.tf  outputs.tf  variables.tf
infra/s3/: main.tf  outputs.tf  variables.tf
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: aws-ecr-repository-push.sh  build.sh  build_lambdas.sh  deploy-ecr.sh  deploy.sh  export-creds.sh
tests/unit/: conftest.py  test_check_service.py  test_front_service.py  test_monitor_service.py
