[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.0"
fastapi = "^0.68.0"
pytest = "^6.2.4"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4" 